# mcp-python-streamable-e2e-test-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  sample.env
.devcontainer/: compose.yml  devcontainer.json
src/mcp_python_e2e_docker_template/: __init__.py  client.py  config.py
src/mcp_python_streamable_e2e_test_template/: __init__.py  client.py  server.py
src/mcp_server/: __init__.py  config.py  server.py  server_instance.py
src/mcp_server/resources/: greeting.py
src/mcp_server/tools/: calc.py
tests/: conftest.py  test_client.py
